<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_above="@id/messageBoxLayout"
        android:padding="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_connected_status"
            android:id="@+id/connectionStatus"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_received"/>


        <com.danlls.daniel.pastelink.util.RecyclerViewEmptySupport
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/receivedRecyclerView">

        </com.danlls.daniel.pastelink.util.RecyclerViewEmptySupport>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/list_empty"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:text="@string/empty_list"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:id="@+id/messageBoxLayout">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="4dp">

            <ProgressBar
                android:id="@+id/indeterminateBar"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:indeterminate="true"
                android:layout_gravity="center"
                android:visibility="invisible"/>

        </FrameLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/message_box_background">

            <android.support.design.widget.TextInputEditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/url_hint"
                android:id="@+id/messageBox" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/send"
                android:src="@drawable/ic_send_black_24dp"
                android:id="@+id/send_button"
                android:layout_gravity="center"
                android:padding="8dp"
                android:background="@android:color/transparent"/>
        </LinearLayout>

    </LinearLayout>



</RelativeLayout>
